Referenssit - Uusi monipakkaus

--- a/referenssit/index.html
+++ b/referenssit/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--[if IE]><!--> <html lang="fi" class="subpage refpage"> <!--<![endif]-->
 <html lang="fi" class="livejs-loading subpage refpage">
 <head>
   <meta charset="utf-8">
@@ -32,7 +33,18 @@
 
       <div class="content">
 
-        <h3 class="first">Viinipullojen kuljetus ja esillepanokennolevy</h3>
+        <h3 class="first">Uudenlainen monipakkaus</h3>
+
+        <span class="thumbnail ref-thumbnail">
+          <img src="/img/monipakkaus1.jpg" alt="">
+          <legend>Kaksi- ja kolmipakkauksen lisäksi nelipakkaus on mahdollista valmistaa.</legend>
+        </span>
+        <span class="thumbnail ref-thumbnail">
+          <img src="/img/monipakkaus2.jpg" alt="">
+          <legend>Monipakkauksen messunäyte kahdelle kartonkitölkille (A&amp;C Carton)</legend>
+        </span>
+
+        <h3>Viinipullojen kuljetus ja esillepanokennolevy</h3>
 
         <span class="thumbnail ref-thumbnail">
           <img src="/img/kuljetus-minidolly.jpg" alt="">
