--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--[if IE]><!--> <html lang="fi" class="mainpage"> <!--<![endif]-->
 <html lang="fi" class="livejs-loading mainpage">
 <head>
   <meta charset="utf-8">
