--- a/yhteystiedot/index.html
+++ b/yhteystiedot/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--[if IE]><!--> <html lang="fi" class="subpage"> <!--<![endif]-->
 <html lang="fi" class="livejs-loading subpage">
 <head>
   <meta charset="utf-8">
