Korjauksia + yritys kuva

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!--[if IE]><!--> <html lang="fi" class="mainpage"> <!--<![endif]-->
-<html lang="fi" class="livejs-loading mainpage">
+<!--[if IE]> <html lang="fi" class="mainpage"> <![endif]-->
+<!--[if gt IE 10]><!--> <html lang="fi" class="livejs-loading mainpage"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <title>Suunnittelutoimisto Inno-Vai Oy</title>
