--- a/referenssit/index.html
+++ b/referenssit/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!--[if IE]><!--> <html lang="fi" class="subpage refpage"> <!--<![endif]-->
-<html lang="fi" class="livejs-loading subpage refpage">
+<!--[if IE]> <html lang="fi" class="subpage refpage"> <![endif]-->
+<!--[if gt IE 10]><!--> <html lang="fi" class="livejs-loading subpage refpage"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <title>Referenssit - Suunnittelutoimisto Inno-Vai Oy</title>
@@ -37,11 +37,11 @@
 
         <span class="thumbnail ref-thumbnail">
           <img src="/img/monipakkaus1.jpg" alt="">
-          <legend>Kaksi- ja kolmipakkauksen lisäksi nelipakkaus on mahdollista valmistaa.</legend>
+          <legend>Kaksi- ja kolmipakkauksen lisäksi<br>nelipakkaus on mahdollista valmistaa.</legend>
         </span>
         <span class="thumbnail ref-thumbnail">
           <img src="/img/monipakkaus2.jpg" alt="">
-          <legend>Monipakkauksen messunäyte kahdelle kartonkitölkille (A&amp;C Carton)</legend>
+          <legend>Monipakkauksen messunäyte kahdelle<br>kartonkitölkille (A&amp;C Carton)</legend>
         </span>
 
         <h3>Viinipullojen kuljetus ja esillepanokennolevy</h3>
