--- a/yritys/index.html
+++ b/yritys/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!--[if IE]><!--> <html lang="fi" class="subpage"> <!--<![endif]-->
-<html lang="fi" class="livejs-loading subpage">
+<!--[if IE]> <html lang="fi" class="subpage"> <![endif]-->
+<!--[if gt IE 10]><!--> <html lang="fi" class="livejs-loading subpage"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <title>Yritys - Suunnittelutoimisto Inno-Vai Oy</title>
@@ -33,7 +33,7 @@
 
       <div class="content">
         <span class="thumbnail">
-          <img src="http://placehold.it/300x210" alt="Veijo Aikio">
+          <img src="/img/aikio.jpg" alt="Veijo Aikio">
         </span>
         <p class="clear">Inno-Vai Oy on pakkausten konseptisuunnitteluun, ideointiin sekä pakkausten tekniseen suunnitteluun ja toteutukseen erikoistunut suunnittelutoimisto.</p>
         <p>Veijo Aikio toimii omistamansa toimiston suunnittelutyöstä vastaavana resurssina.</p>
