--- a/yhteystiedot/index.html
+++ b/yhteystiedot/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!--[if IE]><!--> <html lang="fi" class="subpage"> <!--<![endif]-->
-<html lang="fi" class="livejs-loading subpage">
+<!--[if IE]> <html lang="fi" class="subpage"> <![endif]-->
+<!--[if gt IE 10]><!--> <html lang="fi" class="livejs-loading subpage"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <title>Yhteystiedot - Suunnittelutoimisto Inno-Vai Oy</title>
