--- a/referenssit/index.html
+++ b/referenssit/index.html
@@ -41,7 +41,7 @@
         </span>
         <span class="thumbnail ref-thumbnail">
           <img src="/img/monipakkaus2.jpg" alt="">
-          <legend>Monipakkauksen messunäyte kahdelle<br>kartonkitölkille (A&amp;C Carton)</legend>
+          <legend>Monipakkauksen messunäyte kahdelle<br>kartonkitölkille (A&amp;R Carton Oy)</legend>
         </span>
 
         <h3>Viinipullojen kuljetus ja esillepanokennolevy</h3>
