--- a/yritys/index.html
+++ b/yritys/index.html
@@ -37,10 +37,10 @@
         </span>
         <p class="clear">Inno-Vai Oy on pakkausten konseptisuunnitteluun, ideointiin sekä pakkausten tekniseen suunnitteluun ja toteutukseen erikoistunut suunnittelutoimisto.</p>
         <p>Veijo Aikio toimii omistamansa toimiston suunnittelutyöstä vastaavana resurssina.</p>
-        <p>Verkostoitumisen avulla suunnittelu resurssit saadaan mukautetuksi nopeasti vastaamaan asiakkaan tarpeita.</p>
+        <p>Verkostoitumisen avulla suunnitteluresurssit saadaan mukautetuksi nopeasti vastaamaan asiakkaan tarpeita.</p>
         <p>Kokemusta lukemattomista erilaisista pakkausprojekteista.</p>
         <p>Laaja kokemus pakkauskone hankinnoista.</p>
-        <p>Toteuttanut useita pakkauslinjojen layoutsuunnitelmia, johon on sisältynyt pakkauskone hankinnat.</p>
+        <p>Toteuttanut useita pakkauslinjojen layout-suunnitelmia, johon on sisältynyt pakkauskonehankinnat.</p>
       </div>
 
     </div>
