--- a/referenssit/index.html
+++ b/referenssit/index.html
@@ -44,6 +44,29 @@
           <legend>Monipakkauksen messunäyte kahdelle<br>kartonkitölkille (A&amp;R Carton Oy)</legend>
         </span>
 
+        <h3>Original-retropullot</h3>
+
+        <div class="">
+          <p>Vuoden huiput 2012 kilpailussa Hopeahuippu-palkinnon saanut Hartwall Original-retropullo. Inno-Vai Oy vastasi pullon teknisestä suunnittelusta. Lue lisää kilpailusta <a href="http://www.vuodenhuiput.fi/vuodenhuiput/huiput_2012/tulokset?tyo=1203QHL&palkinto=2" target="_blank">tästä</a>.</p>
+          <p>Palkintoraati: "<em>Malliesimerkki siitä, miten nostalgia on herätetty huolellisesti henkiin pieniä yksityiskohtia myöten. Pullon muoto ilahduttaa ja synnyttää positiivisia mielikuvia, jotka liittää mielellään kyseiseen juomaan. Kippis 60-vuotiaalle Original Long Drinkille!</em>"</p>
+        </div>
+
+        <span class="thumbnail ref-thumbnail">
+          <img src="/img/retro1.jpg" alt="">
+        </span>
+        <span class="thumbnail ref-thumbnail">
+          <img src="/img/retro2.jpg" alt="">
+        </span>
+        <span class="thumbnail ref-thumbnail">
+          <img src="/img/retro3.jpg" alt="">
+        </span>
+        <span class="thumbnail ref-thumbnail">
+          <img src="/img/retro4.jpg" alt="">
+        </span>
+        <span class="thumbnail ref-thumbnail ref-full-thumbnail">
+          <img src="/img/retro5.jpg" alt="">
+        </span>
+
         <h3>Viinipullojen kuljetus ja esillepanokennolevy</h3>
 
         <span class="thumbnail ref-thumbnail">
