--- a/index.html
+++ b/index.html
@@ -1,94 +1,51 @@
-<!DOCTYPE html>
-<!--[if IE]> <html lang="fi" class="mainpage"> <![endif]-->
-<!--[if gt IE 10]><!--> <html lang="fi" class="livejs-loading mainpage"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <title>Suunnittelutoimisto Inno-Vai Oy</title>
-  <meta name="description" content="Inno-Vai Oy on pakkausten konseptisuunnitteluun, ideointiin sekä pakkausten tekniseen suunnitteluun ja toteutukseen erikoistunut suunnittelutoimisto.">
-  <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,700">
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Tienne:900&text=Inno-Vai%20Oy">
-  <link rel="stylesheet" href="/css/main.css">
-  <script src="/js/html5.js"></script>
-</head>
-<body>
+<!doctype html>
+<html class="no-js" lang="fi">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>Suunnittelutoimisto Inno-Vai Oy</title>
+        <meta name="description" content="Inno-Vai Oy on pakkausten konseptisuunnitteluun, ideointiin sekä pakkausten tekniseen suunnitteluun ja toteutukseen erikoistunut suunnittelutoimisto.">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+          <img class="logo" src="innovai.png" alt="Suunnittelutoimisto Inno-Vai Oy">
+          <p class="esittely">Inno-Vai Oy on pakkausten konseptisuunnitteluun, ideointiin sekä pakkausten tekniseen suunnitteluun ja toteutukseen erikoistunut suunnittelutoimisto.</p>
+        </header>
 
-  <div class="container">
-    <div class="site-promo">
-      <!--<div class="whiteshape"></div><div class="blueshape"></div><h1>Inno-Vai Oy</h1>-->
-      <a href="/" title="Inno-Vai Oy">
-        <img src="/img/logo.png" alt="Inno-Vai Oy" class="logo" />
-      </a>
-      <p class="description">Inno-Vai Oy on pakkausten konseptisuunnitteluun, ideointiin sekä pakkausten tekniseen suunnitteluun ja toteutukseen erikoistunut suunnittelutoimisto.</p>
-    </div><!-- end site-promo -->
-  </div>
+        <article>
 
-  <div class="site-content">
+          <h1>Suunnittelutoimisto Inno-Vai Oy</h1>
 
-    <div class="container">
-      <div class="grid">
-        <div class="grid-cell">
-          <a href="/yritys/" title="Yritysesittely">
-            <h3><i class="icon-star"></i> Yritysesittely</h3>
-            <p>Inno-Vai Oy on pakkausten konsepti- suunnitteluun, ideointiin sekä pakkausten tekniseen suunnitteluun ja toteutukseen erikoistunut suunnittelutoimisto.</p>
-          </a>
-        </div>
+          <p>
+            Yrityksellämme on kokemusta lukemattomista pakkausprojekteista. Olemme toteuttaneet mm. layout-suunnitelmia sekä panimotuotteiden kuljetus- ja myyntipakkauksia. Vuosien varrella olemme kartuttaneet pakkausalan kokemusta ja saavutuksia monipuolisesti niin kotimaassa kuin pohjoismaissa. Ottamalla meihin yhtettä varmistat kehitysprojektillesi tarvittavan pakkausalan osaamisen ja vuosikymmenten kokemuksen onnistuneista projekteista.
+          </p>
 
-        <div class="grid-cell">
-          <a href="/referenssit/" title="Referenssit">
-            <h3><i class="icon-star"></i> Referenssit</h3>
-            <p>
-              Yrityksellämme on kokemusta lukemattomista pakkausprojekteista. Olemme toteuttaneet mm. layout-suunnitelmia sekä panimotuotteiden kuljetus- ja myyntipakkauksia.</p>
-          </a>
-        </div>
+          <p class="referenssit">
+            Tutustu saavutuksimme ja referensseihimme <a href="https://www.linkedin.com/company/suunnittelutoimisto-inno-vai-oy/" target="_blank">LinkedIn-sivullamme</a>.
+          </p>
+          <p class="yhteystiedot">
+            <a href="tel:+358400557995">040 0557995</a> / <a href="mailto:suunnittelutoimisto+poistamama@innovai.fi">suunnittelutoimisto@innovai.fi</a> / <a href="https://www.linkedin.com/company/suunnittelutoimisto-inno-vai-oy/" title="LinkedIn - Inno-Vai Oy">LinkedIn</a>
+          </p>
+          <p class="osoite">
+            Lehtikummuntie 8 j 19, 01690 Vantaa
+          </p>
+           <p class="linkedin">
+            <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
+            <script type="IN/FollowCompany" data-id="1337"></script>
+          </p>
+        </article>
 
-        <div class="grid-cell">
-          <a href="/saavutukset/" title="Saavutukset">
-            <h3><i class="icon-star"></i> Saavutukset</h3>
-            <p>Vuosien varrella olemme kartuttaneet pakkausalan kokemusta ja saavutuksia monipuolisesti niin kotimaassa kuin pohjoismaissa.</p>
-          </a>
-        </div>
+        <footer>
+          <div class="copyright">&copy; Inno-Vai Oy 2016</div>
+          <div class="production"><a href="http://www.vagabondfactory.com/" target="_blank">WebProduction Vagabond Factory</a></div>
+        </footer>
 
-        <div class="grid-cell">
-          <a href="/yhteystiedot/" title="Yhteystiedot">
-            <h3><i class="icon-star"></i> Yhteystiedot</h3>
-            <p>Ottamalla yhtettä meihin varmistat kehitysprojektillesi tarvittavan pakkausalan osaamisen ja vuosikymmenten kokemuksen onnistuneista projekteista.</p>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <aside class="aside">
-    <div class="container">
-      <ul class="inline-block-list">
-        <li>
-          <i class="icon-phone"></i>
-          +358 40 0557995
-        </li>
-        <li>
-          <i class="icon-envelope-alt"></i>
-          suunnittelutoimisto@innovai.fi
-        </li>
-        <li>
-          <i class="icon-home"></i>
-          <a href="http://www.innovai.fi/" title="Inno-Vai Oy">
-            www.innovai.fi
-          </a>
-        </li>
-      </ul>
-    </div>
-  </aside><!-- end aside -->
-
-  <footer class="site-footer" role="contentinfo">
-    <div class="container">&copy; Inno-Vai Oy 2013<br>WebProduction <a href="http://www.vagabondfactory.com/" target="_blank">Vagabond Factory</a></div>
-  </footer><!-- end site-footer -->
-
-  <script>
-  var _gaq=[['_setAccount','UA-37342738-1'],['_trackPageview']];
-  (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-    s.parentNode.insertBefore(g,s)}(document,'script'));
-  </script>
-</body>
+        <script>
+            window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
+            ga('create','UA-37342738-1','auto');ga('send','pageview')
+        </script>
+        <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+    </body>
 </html>
