--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="Inno-Vai Oy on pakkausten konseptisuunnitteluun, ideointiin sekä pakkausten tekniseen suunnitteluun ja toteutukseen erikoistunut suunnittelutoimisto.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+        <meta name="theme-color" content="#070638">
     </head>
     <body>
         <header>
