--- a/index.html
+++ b/index.html
@@ -15,19 +15,17 @@
           <p class="esittely">Inno-Vai Oy on pakkausten konseptisuunnitteluun, ideointiin sekä pakkausten tekniseen suunnitteluun ja toteutukseen erikoistunut suunnittelutoimisto.</p>
         </header>
 
-        <article>
-
+        <main>
+          <article>
           <h1>Suunnittelutoimisto Inno-Vai Oy</h1>
-
           <p>
             Yrityksellämme on kokemusta lukemattomista pakkausprojekteista. Olemme toteuttaneet mm. layout-suunnitelmia sekä panimotuotteiden kuljetus- ja myyntipakkauksia. Vuosien varrella olemme kartuttaneet pakkausalan kokemusta ja saavutuksia monipuolisesti niin kotimaassa kuin pohjoismaissa. Ottamalla meihin yhtettä varmistat kehitysprojektillesi tarvittavan pakkausalan osaamisen ja vuosikymmenten kokemuksen onnistuneista projekteista.
           </p>
-
           <p class="referenssit">
             Tutustu saavutuksimme ja referensseihimme <a href="https://www.linkedin.com/company/suunnittelutoimisto-inno-vai-oy/" target="_blank">LinkedIn-sivullamme</a>.
           </p>
           <p class="yhteystiedot">
-            <a href="tel:+358400557995">040 0557995</a> / <a href="mailto:suunnittelutoimisto+poistamama@innovai.fi">suunnittelutoimisto@innovai.fi</a> / <a href="https://www.linkedin.com/company/suunnittelutoimisto-inno-vai-oy/" title="LinkedIn - Inno-Vai Oy">LinkedIn</a>
+            <a href="tel:+358400557995">040 0557995</a> / <a href="mailto:suunnittelutoimisto+poista-tama-osa@innovai.fi">suunnittelutoimisto@innovai.fi</a> / <a href="https://www.linkedin.com/company/suunnittelutoimisto-inno-vai-oy/" title="LinkedIn - Inno-Vai Oy">LinkedIn</a>
           </p>
           <p class="osoite">
             Lehtikummuntie 8 j 19, 01690 Vantaa
@@ -36,10 +34,16 @@
             <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
             <script type="IN/FollowCompany" data-id="1337"></script>
           </p>
-        </article>
+          </article>
+          <aside>
+            <img src="artikkeli.jpg" alt="">
+            <p>Kuvassa Inno-Vai Oy:n suunnittelema innovatiivinen pakkaus verkkokauppatoimituksiin. Lue lisää pakkauksesta Pakkaus-lehden artikkelista: <a href="http://www.pakkaus.com/artikkeli/alko-aloittaa-verkkokaupan-nokkela-keksinto-kuljettaa-pullot-ehjina-perille/" target="_blank">Alko aloittaa verkkokaupan – Nokkela keksintö kuljettaa pullot ehjinä perille.</a> Kuvat: <a href="https://fi.linkedin.com/in/ellinousiainen" target="blank">Elli Kultanen</a>, <a href="http://www.pakkaus.com/pakkaus-lehti/" target="_blank">Pakkaus-lehti</a>.</p>
+          </aside>
+        </main>
+
 
         <footer>
-          <div class="copyright">&copy; Inno-Vai Oy 2016</div>
+          <div class="copyright">&copy; Inno-Vai Oy 2017</div>
           <div class="production"><a href="http://www.vagabondfactory.com/" target="_blank">WebProduction Vagabond Factory</a></div>
         </footer>
 
